src/test/deca/syntax/valid/personal/conditions.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 04/01/2023

{
    if (i == 5){
        print("hi");
    }
    else if (5 <= 10) {
        print("hi");
    }
    else if (7 <= 10){
        print("hi");
    }
    else {
        print("hi");
    }
}

