src/test/deca/syntax/invalid/9_inst.deca
// Description:
//    tests de non-terminal 'inst' ne manque le ')'.
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    int a =6;
    print(;

}